# 5minBot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Micro.cpp  README.md
cmake/: FindSC2Api.cmake
src/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  BotAssert.cpp  BotAssert.h  BotConfig.cpp  BotConfig.h  BuildOrder.cpp  BuildOrder.h  BuildOrderQueue.cpp  BuildOrderQueue.h  BuildType.cpp  BuildType.h  Building.cpp  Building.h  BuildingData.cpp  BuildingData.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  CCBot.cpp  CCBot.h  CMakeLists.txt  CUnit.cpp  CUnit.h  CombatCommander.cpp  CombatCommander.h  Common.h  DistanceMap.cpp  DistanceMap.h  Drawing.cpp  Drawing.h  GameCommander.cpp  GameCommander.h  HarassLiberator.cpp  HarassLiberator.h  HarassManager.cpp  HarassManager.h  (+44 more)
src/AutoObserver/: CameraModule.cpp  CameraModule.h
vs/: 5minBot.sln  5minBot.vcxproj  CommandCenter.vcxproj  CommandCenter.vcxproj.filters
